--- a/style.css
+++ b/style.css
@@ -284,8 +284,38 @@ button {
 }
 /* Generate Button Ends */
 
-/* For Supporting Mozilla Firefox */
+/*------Footer-------- */
+footer{
+  background: linear-gradient(to top right, var(--dk-violet) 60%, var(--vb-violet) );
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  line-height: 1.3rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 700;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  letter-spacing: 1px;
+}
 
+footer a{
+  color: white;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 500px){
+  footer{
+    font-size: 0.5rem;
+    line-height: 0.7rem;
+  }
+}
+/*--------Footer Ends--------*/
+
+
+/* For Supporting Mozilla Firefox */
 .slider::-moz-range-thumb {
   appearance: none;
   width: 2rem;
